Added new items

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,44 @@
 body {
   background-color: #005064;
+  color: #e8fdff;
+  text-align: center;
 }
+
+/*  -------- Navbar --------  */
+nav {
+  display: flex;
+}
+
+.bg-custom {
+  background-color: #005064;
+}
+
+/* Navbar brand and text color */
+.navbar-custom .navbar-brand,
+.navbar-custom .navbar-text {
+    color: #e8fdff;
+}
+
+/* Navbar link color */
+.navbar-custom .navbar-nav .nav-link {
+    color: rgba(255,255,255,.5);
+}
+/* Navbar color of active or hovered links */
+.navbar-custom .nav-item.active .nav-link,
+.navbar-custom .nav-item:focus .nav-link,
+.navbar-custom .nav-item:hover .nav-link {
+    color: #ffffff;
+}
+
+.navbar-collapse {
+  justify-content: flex-end;
+}
+
+/*  -------- Body of website --------  */
+.card-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+/*  -------- Media queries --------  */
