--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ nav {
 .card-container {
   display: flex;
   flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 /*  -------- Media queries --------  */
